Fix code style misalignment and bold border issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -100,7 +100,6 @@ mark {
 }
 pre, code {
     font-family:Menlo, Monaco, Consolas, "Lucida Console", "Courier New", monospace;
-    font-size:.92857em;
 }
 pre {
     overflow:auto;
@@ -1049,6 +1048,10 @@ table tr th, table tr td {
     border: 1px solid #CCC;
     padding: 0.5em 1em;
     text-align: left;
+}
+
+table tbody tr td:nth-of-type(1) pre {
+    margin-right: -1px;
 }
 
 .github-badge {
